готова страница компании 09.03.2021

--- a/dashboard-company.html
+++ b/dashboard-company.html
@@ -244,27 +244,113 @@
                         <p class="account__company-content-empty-text">Пока нет текущих услуг.</p>
                     </div>
                     <div class="account__company-content-list">
+                        <!-- active / in-work -->
                         <div class="account__company-content-item">
                             <div class="account__company-content-item-user">
                                 <!-- online -->
                                 <div class="account__company-content-item-user-avatar online">
-                                    <img class="account__company-content-item-user-img" src="img/private-office/avatar_default-min.png" alt="" width="60" height="60">
+                                    <img class="account__company-content-item-user-img" src="img/private-office/avatar_default-min.png" alt="" width="64" height="64">
                                     <div class="account__company-content-item-user-indicator"></div>
                                     <span class="account__company-content-item-user-status">Онлайн</span>
                                 </div>
                                 <div class="account__company-content-item-user-info">
                                     <p class="account__company-content-item-user-text">Name</p>
-                                    <div class="account__company-content-item-user-mobile">
+                                    <!-- <div class="account__company-content-item-user-mobile">
                                         <p class="account__company-content-item-user-mobile-text">Услуга: <span>Screen профиля</span></p>
                                         <p class="account__company-content-item-user-mobile-text">Дата начала РК: <span>27.01.2021</span></p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
-                            <div class="account__company-content-item-service">Screen профиля</div>
-                            <div class="account__company-content-item-new">
-                                <span class="account__company-content-item-new-counter">0</span>
+                            <div class="account__company-content-item-service">
+                                <p class="account__company-content-item-service-text">1 грн.</p>
+                                <p class="account__company-content-item-service-text account__company-content-item-service-text--info">Стоимость</p>
+                                <p class="account__company-content-item-service-text account__company-content-item-service-text--descr">Screen профиля</p>
                             </div>
-                            <div class="account__company-content-item-date">27.01.2021</div>
+                            <div class="account__company-content-item-date">
+                                <p class="account__company-content-item-date-text">03 мар</p>
+                                <p class="account__company-content-item-date-text account__company-content-item-date-text--info">Дата начала</p>
+                            </div>
+                            <div class="account__company-content-item-status">
+                                <p class="account__company-content-item-status-text">Арбитраж, разрешен</p>
+                                <p class="account__company-content-item-status-text account__company-content-item-status-text--info">Статус</p>
+                            </div>
+                            <div class="account__company-content-item-action">
+                                <button class="account__company-content-item-action-button account__company-content-item-action-button--message">Написать</button>
+                                <button class="account__company-content-item-action-button account__company-content-item-action-button--take">Взять задание</button>
+                                <button class="account__company-content-item-action-button account__company-content-item-action-button--confirm">Подтвердить задание</button>
+                            </div>
+                        </div>
+                        <!-- active / in-work -->
+                        <div class="account__company-content-item active">
+                            <div class="account__company-content-item-user">
+                                <!-- online -->
+                                <div class="account__company-content-item-user-avatar">
+                                    <img class="account__company-content-item-user-img" src="img/private-office/avatar_default-min.png" alt="" width="64" height="64">
+                                    <div class="account__company-content-item-user-indicator"></div>
+                                    <span class="account__company-content-item-user-status">Онлайн</span>
+                                </div>
+                                <div class="account__company-content-item-user-info">
+                                    <p class="account__company-content-item-user-text">Name</p>
+                                    <!-- <div class="account__company-content-item-user-mobile">
+                                        <p class="account__company-content-item-user-mobile-text">Услуга: <span>Screen профиля</span></p>
+                                        <p class="account__company-content-item-user-mobile-text">Дата начала РК: <span>27.01.2021</span></p>
+                                    </div> -->
+                                </div>
+                            </div>
+                            <div class="account__company-content-item-service">
+                                <p class="account__company-content-item-service-text">1 грн.</p>
+                                <p class="account__company-content-item-service-text account__company-content-item-service-text--info">Стоимость</p>
+                                <p class="account__company-content-item-service-text account__company-content-item-service-text--descr">Screen профиля</p>
+                            </div>
+                            <div class="account__company-content-item-date">
+                                <p class="account__company-content-item-date-text">03 мар</p>
+                                <p class="account__company-content-item-date-text account__company-content-item-date-text--info">Дата начала</p>
+                            </div>
+                            <div class="account__company-content-item-status">
+                                <p class="account__company-content-item-status-text">В работе</p>
+                                <p class="account__company-content-item-status-text account__company-content-item-status-text--info">Статус</p>
+                            </div>
+                            <div class="account__company-content-item-action">
+                                <button class="account__company-content-item-action-button account__company-content-item-action-button--message">Написать</button>
+                                <button class="account__company-content-item-action-button account__company-content-item-action-button--take">Взять задание</button>
+                                <button class="account__company-content-item-action-button account__company-content-item-action-button--confirm">Подтвердить задание</button>
+                            </div>
+                        </div>
+                        <!-- active / in-work -->
+                        <div class="account__company-content-item active in-work">
+                            <div class="account__company-content-item-user">
+                                <!-- online -->
+                                <div class="account__company-content-item-user-avatar online">
+                                    <img class="account__company-content-item-user-img" src="img/private-office/avatar_default-min.png" alt="" width="64" height="64">
+                                    <div class="account__company-content-item-user-indicator"></div>
+                                    <span class="account__company-content-item-user-status">Онлайн</span>
+                                </div>
+                                <div class="account__company-content-item-user-info">
+                                    <p class="account__company-content-item-user-text">Name</p>
+                                    <!-- <div class="account__company-content-item-user-mobile">
+                                        <p class="account__company-content-item-user-mobile-text">Услуга: <span>Screen профиля</span></p>
+                                        <p class="account__company-content-item-user-mobile-text">Дата начала РК: <span>27.01.2021</span></p>
+                                    </div> -->
+                                </div>
+                            </div>
+                            <div class="account__company-content-item-service">
+                                <p class="account__company-content-item-service-text">1 грн.</p>
+                                <p class="account__company-content-item-service-text account__company-content-item-service-text--info">Стоимость</p>
+                                <p class="account__company-content-item-service-text account__company-content-item-service-text--descr">Screen профиля</p>
+                            </div>
+                            <div class="account__company-content-item-date">
+                                <p class="account__company-content-item-date-text">03 мар</p>
+                                <p class="account__company-content-item-date-text account__company-content-item-date-text--info">Дата начала</p>
+                            </div>
+                            <div class="account__company-content-item-status">
+                                <p class="account__company-content-item-status-text">В работе</p>
+                                <p class="account__company-content-item-status-text account__company-content-item-status-text--info">Статус</p>
+                            </div>
+                            <div class="account__company-content-item-action">
+                                <button class="account__company-content-item-action-button account__company-content-item-action-button--message">Написать</button>
+                                <button class="account__company-content-item-action-button account__company-content-item-action-button--take">Взять задание</button>
+                                <button class="account__company-content-item-action-button account__company-content-item-action-button--confirm">Подтвердить задание</button>
+                            </div>
                         </div>
                     </div>
                 </div>
