готова страница избранные блогеры 11.03.2021

--- a/dashboard-favorit.html
+++ b/dashboard-favorit.html
@@ -197,41 +197,155 @@
                         <img class="account__favorit-content-empty-img" src="img/private-office/favorit.png" alt="" width="200" height="200">
                         <p class="account__favorit-content-empty-text">Не найдено исполнителей.</p>
                     </div>
-                    <div class="account__favorit-content-list">
+                    <div class="account__favorit-list catalog__blogger-list">
 
-                        <div class="account__favorit-content-item">
-                            <div class="account__favorit-content-left">
-                                <div class="account__favorit-content-item-user">
+                        <div class="catalog__blogger-item">
+                            <div class="catalog__blogger-left">
+                                <div class="catalog__blogger-item-user">
                                     <!-- online -->
-                                    <div class="account__favorit-content-item-user-avatar online">
-                                        <img class="account__favorit-content-item-user-img" src="img/private-office/avatar_default.png" alt="" width="64" height="64">
-                                        <div class="account__favorit-content-item-user-indicator"></div>
-                                        <span class="account__favorit-content-item-user-status">Онлайн</span>
+                                    <div class="catalog__blogger-item-user-avatar online">
+                                        <img class="catalog__blogger-item-user-img" src="img/private-office/avatar_default.png" alt="" width="64" height="64">
+                                        <div class="catalog__blogger-item-user-indicator"></div>
+                                        <span class="catalog__blogger-item-user-status">Онлайн</span>
+                                    </div>
+                                </div>
+                                <button class="catalog__blogger-item-user-button">
+                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 50 50" viewBox="0 0 50 50" xml:space="preserve" class="catalog__blogger-item-user-svg">
+                                        <path d="M35,8  c-4.176,0-7.851,2.136-10,5.373C22.851,10.136,19.176,8,15,8C8.373,8,3,13.373,3,20c0,14,16,21,22,26c6-5,22-12,22-26  C47,13.373,41.627,8,35,8z" stroke-linecap="round" stroke-miterlimit="10" stroke-width="3"></path>
+                                    </svg> В избранном
+                                </button>
+                            </div>
+                            <div class="catalog__blogger-center">
+                                <div class="catalog__blogger-center-head">
+                                    <a href="http://google.ru/" class="catalog__blogger-item-user-link">Name</a>
+                                    <p class="catalog__blogger-item-user-text">Тернополь</p>
+                                    <div class="catalog__blogger-item-user-stats">
+                                        <div class="catalog__blogger-item-user-item">
+                                            <p class="catalog__blogger-item-user-item-title">150914</p>
+                                            <p class="catalog__blogger-item-user-item-text">Подписчиков</p>
+                                        </div>
+                                        <div class="catalog__blogger-item-user-item">
+                                            <p class="catalog__blogger-item-user-item-title">4.39 %</p>
+                                            <p class="catalog__blogger-item-user-item-text">ER</p>
+                                        </div>
+                                        <div class="catalog__blogger-item-user-item catalog__blogger-item-user-item--line"></div>
+                                        <div class="catalog__blogger-item-user-item">
+                                            <p class="catalog__blogger-item-user-item-title">1300 ₴</p>
+                                            <p class="catalog__blogger-item-user-item-text">Пост</p>
+                                        </div>
+                                        <div class="catalog__blogger-item-user-item">
+                                            <p class="catalog__blogger-item-user-item-title">900 ₴</p>
+                                            <p class="catalog__blogger-item-user-item-text">Stories</p>
+                                        </div>
+                                        <div class="catalog__blogger-item-user-item">
+                                            <p class="catalog__blogger-item-user-item-title">2000 ₴</p>
+                                            <p class="catalog__blogger-item-user-item-text">Пост + Stories</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="catalog__blogger-center-bottom">
+                                    <div class="catalog__blogger-item-user-tags">
+                                        <p class="catalog__blogger-item-user-tags-text">Тематики:</p>
+                                        <p class="catalog__blogger-item-user-tags-button catalog__blogger-item-user-tags-button--uno">Здоровье</p>
+                                        <p class="catalog__blogger-item-user-tags-button catalog__blogger-item-user-tags-button--dos">Лайфстайл</p>
+                                        <p class="catalog__blogger-item-user-tags-button catalog__blogger-item-user-tags-button--tres">Тревел-блог</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="account__favorit-content-center">
-                                <a href="google.ru" class="account__favorit-content-item-user-link">Name</a>
+                            <div class="catalog__blogger-right">
+                                <div class="catalog__blogger-item-rating">
+                                    <div class="catalog__blogger-item-rating-head">
+                                        <p class="catalog__blogger-item-rating-head-text svg-star">Отзыв/ов: 30</p>
+                                    </div>
+                                    <div class="catalog__blogger-item-rating-image">
+                                        <div class="catalog__blogger-item-rating-chart">
+                                            <svg class="catalog__blogger-item-rating-chart-svg" width="90px" height="90px" viewBox="0 0 120 120">
+                                                <circle cx="60" cy="60" r="50" fill="#fff"></circle>
+                                                <circle data-percent="72" cx="60" cy="60" r="50" fill="transparent" stroke="#ffe500" style="stroke-width: 20px; stroke-dasharray: 226.195, 87.9646; stroke-dashoffset: 78.5398px;"></circle>
+                                                <circle data-percent="28" cx="60" cy="60" r="50" fill="transparent" stroke="#b3b0af" style="stroke-width: 20px; stroke-dasharray: 87.9646, 226.195; stroke-dashoffset: -147.655px;"></circle>
+                                            </svg>
+                                            <div class="catalog__blogger-item-rating-info">
+                                                <p class="catalog__blogger-item-rating-info-title">72%</p>
+                                                <p class="catalog__blogger-item-rating-info-text">Рейтинг</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="catalog__blogger-item-link" href="https://www.bloggermall.com.ua/freelancer/4343974/">Подробнее</a>
                             </div>
-                            <div class="account__favorit-content-right"></div>
+                        </div>
 
-                            <div class="account__favorit-content-item-service">
-                                <p class="account__favorit-content-item-service-text">1 грн.</p>
-                                <p class="account__favorit-content-item-service-text account__favorit-content-item-service-text--info">Стоимость</p>
-                                <p class="account__favorit-content-item-service-text account__favorit-content-item-service-text--descr">Screen профиля</p>
+                        <div class="catalog__blogger-item">
+                            <div class="catalog__blogger-left">
+                                <div class="catalog__blogger-item-user">
+                                    <!-- online -->
+                                    <div class="catalog__blogger-item-user-avatar online">
+                                        <img class="catalog__blogger-item-user-img" src="img/private-office/avatar_default.png" alt="" width="64" height="64">
+                                        <div class="catalog__blogger-item-user-indicator"></div>
+                                        <span class="catalog__blogger-item-user-status">Онлайн</span>
+                                    </div>
+                                </div>
+                                <button class="catalog__blogger-item-user-button">
+                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 50 50" viewBox="0 0 50 50" xml:space="preserve" class="catalog__blogger-item-user-svg">
+                                        <path d="M35,8  c-4.176,0-7.851,2.136-10,5.373C22.851,10.136,19.176,8,15,8C8.373,8,3,13.373,3,20c0,14,16,21,22,26c6-5,22-12,22-26  C47,13.373,41.627,8,35,8z" stroke-linecap="round" stroke-miterlimit="10" stroke-width="3"></path>
+                                    </svg> В избранном
+                                </button>
                             </div>
-                            <div class="account__favorit-content-item-date">
-                                <p class="account__favorit-content-item-date-text">03 мар</p>
-                                <p class="account__favorit-content-item-date-text account__favorit-content-item-date-text--info">Дата начала</p>
+                            <div class="catalog__blogger-center">
+                                <div class="catalog__blogger-center-head">
+                                    <a href="http://google.ru/" class="catalog__blogger-item-user-link">Name</a>
+                                    <p class="catalog__blogger-item-user-text">Тернополь</p>
+                                    <div class="catalog__blogger-item-user-stats">
+                                        <div class="catalog__blogger-item-user-item">
+                                            <p class="catalog__blogger-item-user-item-title">150914</p>
+                                            <p class="catalog__blogger-item-user-item-text">Подписчиков</p>
+                                        </div>
+                                        <div class="catalog__blogger-item-user-item">
+                                            <p class="catalog__blogger-item-user-item-title">4.39 %</p>
+                                            <p class="catalog__blogger-item-user-item-text">ER</p>
+                                        </div>
+                                        <div class="catalog__blogger-item-user-item catalog__blogger-item-user-item--line"></div>
+                                        <div class="catalog__blogger-item-user-item">
+                                            <p class="catalog__blogger-item-user-item-title">1300 ₴</p>
+                                            <p class="catalog__blogger-item-user-item-text">Пост</p>
+                                        </div>
+                                        <div class="catalog__blogger-item-user-item">
+                                            <p class="catalog__blogger-item-user-item-title">900 ₴</p>
+                                            <p class="catalog__blogger-item-user-item-text">Stories</p>
+                                        </div>
+                                        <div class="catalog__blogger-item-user-item">
+                                            <p class="catalog__blogger-item-user-item-title">2000 ₴</p>
+                                            <p class="catalog__blogger-item-user-item-text">Пост + Stories</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="catalog__blogger-center-bottom">
+                                    <div class="catalog__blogger-item-user-tags">
+                                        <p class="catalog__blogger-item-user-tags-text">Тематики:</p>
+                                        <p class="catalog__blogger-item-user-tags-button catalog__blogger-item-user-tags-button--uno">Здоровье</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="account__favorit-content-item-status">
-                                <p class="account__favorit-content-item-status-text">Арбитраж, разрешен</p>
-                                <p class="account__favorit-content-item-status-text account__favorit-content-item-status-text--info">Статус</p>
-                            </div>
-                            <div class="account__favorit-content-item-action">
-                                <button class="account__favorit-content-item-action-button account__favorit-content-item-action-button--message">Написать</button>
-                                <button class="account__favorit-content-item-action-button account__favorit-content-item-action-button--take">Взять задание</button>
-                                <button class="account__favorit-content-item-action-button account__favorit-content-item-action-button--confirm">Подтвердить задание</button>
+                            <div class="catalog__blogger-right">
+                                <div class="catalog__blogger-item-rating">
+                                    <div class="catalog__blogger-item-rating-head">
+                                        <p class="catalog__blogger-item-rating-head-text svg-star">Отзыв/ов: 30</p>
+                                    </div>
+                                    <div class="catalog__blogger-item-rating-image">
+                                        <div class="catalog__blogger-item-rating-chart">
+                                            <svg class="catalog__blogger-item-rating-chart-svg" width="90px" height="90px" viewBox="0 0 120 120">
+                                                <circle cx="60" cy="60" r="50" fill="#fff"></circle>
+                                                <circle data-percent="72" cx="60" cy="60" r="50" fill="transparent" stroke="#ffe500" style="stroke-width: 20px; stroke-dasharray: 226.195, 87.9646; stroke-dashoffset: 78.5398px;"></circle>
+                                                <circle data-percent="28" cx="60" cy="60" r="50" fill="transparent" stroke="#b3b0af" style="stroke-width: 20px; stroke-dasharray: 87.9646, 226.195; stroke-dashoffset: -147.655px;"></circle>
+                                            </svg>
+                                            <div class="catalog__blogger-item-rating-info">
+                                                <p class="catalog__blogger-item-rating-info-title">72%</p>
+                                                <p class="catalog__blogger-item-rating-info-text">Рейтинг</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="catalog__blogger-item-link" href="https://www.bloggermall.com.ua/freelancer/4343974/">Подробнее</a>
                             </div>
                         </div>
                     </div>
