--- a/search-bloggers.html
+++ b/search-bloggers.html
@@ -152,7 +152,7 @@
 <div class="search-bloggers">
     <div class="search-bloggers__wrap">
         <asside class="search-bloggers__aside">
-            <div class="search-bloggers__filters filters">
+            <form class="search-bloggers__filters filters">
                 <details class="filters__item">
                     <summary class="filters__title">Коэффициент вовлечености (ER), %</summary>
                     <div class="filters__content">
@@ -166,12 +166,129 @@
                             <label class="range-slider__label" for="max-ER">
                                 До
                             </label>
-                            <input class="range-slider__number range-slider__number--min" type="number" name="er[min]" min="0" max="100" value="0">
-                            <input class="range-slider__number range-slider__number--max" type="number" name="er[max]" min="0" max="100" value="100">
+                            <input class="range-slider__number range-slider__number--min" id="min-ER" type="number" name="er[min]" min="0" max="100" value="0">
+                            <input class="range-slider__number range-slider__number--max" id="max-ER" type="number" name="er[max]" min="0" max="100" value="100">
                         </div>
                     </div>
                 </details>
-            </div>
+                <details class="filters__item">
+                    <summary class="filters__title">Стоимость, ₴</summary>
+                    <div class="filters__content">
+                        <ul class="filters__list">
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="prc[type]" value="story_price" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> Цена за 1 stories
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="prc[type]" value="post_price" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> Цена за фото-пост
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="prc[type]" value="post_story_price" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> Цена за пост + stories
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="prc[type]" value="post_3story_price" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> Цена за 3 stories
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="prc[type]" value="post_video_price" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> Цена за видео-пост
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="prc[type]" value="post_screenprofile_price" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> Цена за скрин профиля
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="prc[type]" value="post_unpackingpost_price" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> Цена за распаковку
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="prc[type]" value="post_giveawaypost_price" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> Цена за Giveaway
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="prc[type]" value="post_personalads_price" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> Цена за рекламу личного аккаунта
+                                </label>
+                            </li>
+                        </ul>
+                        <div class="range-slider">
+                            <input class="range-slider__input" type="range" min="0" max="30000" step="1" value="0">
+                            <input class="range-slider__input" type="range" min="0" max="30000" step="1" value="30000">
+                            <span class="range-slider__line" style="width: 100%; left: 0%;"></span>
+                            <label class="range-slider__label" for="min-price">
+                                От
+                            </label>
+                            <label class="range-slider__label" for="max-price">
+                                До
+                            </label>
+                            <input class="range-slider__number range-slider__number--min" id="min-price" type="number" name="prc[min]" min="0" max="100" value="0">
+                            <input class="range-slider__number range-slider__number--max" id="max-price" type="number" name="prc[max]" min="0" max="100" value="30000">
+                        </div>
+                    </div>
+                </details>
+                <details class="filters__item">
+                    <summary class="filters__title">Количество подписчиков</summary>
+                    <div class="filters__content">
+                        <ul class="filters__list">
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="flwrs" value="1" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> До 5 тыс.
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="flwrs" value="2" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> 5 тыс. - 20 тыс.
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="flwrs" value="3" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> 20 тыс. - 100 тыс.
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="flwrs" value="4" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> 100 тыс. - 500 тыс.
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="flwrs" value="5" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> 500 тыс. - 1 млн.
+                                </label>
+                            </li>
+                            <li class="filters__list-item">
+                                <label class="radio__label radio__label--thin">
+                                    <input type="radio" name="flwrs" value="6" class="radio__input radio__input--checkbox">
+                                    <span class="radio__span radio__span--checkbox"></span> Более 1 млн.
+                                </label>
+                            </li>
+                        </ul>
+                    </div>
+                </details>
+            </form>
         </asside>
         <section class="search-bloggers__content">
             <div class="search-bloggers__favorit search-bloggers__block">
